--- a/index.html
+++ b/index.html
@@ -1204,7 +1204,10 @@
 
 
 
-          <div id="app"></div>
+          <div 
+          id="app"
+          data-youtube="https://www.youtube.com/embed/gZEBDahq7F0?controls=0&autoplay=0&mute=1"
+          ></div>
           <script type="module" src="/src/main.js"></script>
 
 
