--- a/index.html
+++ b/index.html
@@ -1211,6 +1211,13 @@
           <script type="module" src="/src/main.js"></script>
 
 
+          <script>
+            $(window).on('load', function() {   
+              $("header").headroom("destroy").css("position","absolute");
+            })  
+           </script>
+
+
 
 
         </div>
