--- a/index.html
+++ b/index.html
@@ -1206,34 +1206,16 @@
 
           <div 
           id="app"
-          data-youtube="https://www.youtube.com/embed/gZEBDahq7F0?controls=0&autoplay=0&mute=1"
+          data-youtube="https://www.youtube.com/embed/gZEBDahq7F0?controls=0&autoplay=1&mute=1"
           ></div>
           <script type="module" src="/src/main.js"></script>
           <script>
             var fm_data = {
-            "nav": [
-                    {
-                        "title" : "產品簡介",
-                        "link" : "#sec1"
-                    },
-                    {
-                        "title" : "好評推薦",
-                        "link" : "#sec2"
-                    },
-                    {
-                        "title" : "適用族群",
-                        "link" : "#sec3"
-                    },
-                    {
-                        "title" : "購買通路",
-                        "link" : "#sec4"
-                    },
-                    {
-                        "title" : "登錄發票",
-                        "link" : "#sec5"
-                    }
-                ],
-                "kols": [
+            "brief": {
+              youtube : "-sQqi1sMq84",
+              img: "https://cdn.cybassets.com/s/files/12556/theme/38737/assets/1630560739_68ffda22_2da9f4fec48b7acff61c3552d1e9f676.jpg?1630560739"
+            },
+     "kols_sc": [
         {
             "avatar": "//cdn.cybassets.com/media/W1siZiIsIjEyNTU2L2Jsb2dzLzI1OTEwL0RTQzAyNjEyX2Nyb3BfY29tcHJlc3NfMWVkMmY5ZjEwZjE2YTBlMTEwZjQuanBlZyJdLFsicCIsInRodW1iIiwiMTAwMHgiXV0.jpeg?sha=4ddfa13abc46d94b",
             "name": "吳睿恩",
@@ -1246,77 +1228,20 @@
                     "slug": "1"
                 }
             ]
-        },
-        {
-            "avatar": "fm_sec5_dc_1.jpg",
-            "name": "吳睿恩",
-            "job": "跑者",
-            "content": "自從試用過鋭速的咖啡因錠後就從此愛上了！因為我的工作屬於服務業，因為我的工作屬於服務業，因為我的工作屬於服務業，因為我的工作屬於服務業，因為我的工作屬於服務業，工作時比較不能跑廁所，因此平常有喝咖啡習慣的我工作時比較不會喝太多咖啡",
-            "favorites": [
-                {
-                    "name": "爆汗１小時神補給包",
-                    "img": "fm_pr1_sm.png",
-                    "slug": "1"
-                }
-            ]
-        },
-        {
-            "avatar": "fm_sec5_lcs_1.jpg",
-            "name": "吳睿恩",
-            "job": "跑者",
-            "content": "自從試用過鋭速的咖啡因錠後就從此愛上了！因為我的工作屬於服務業，工作時比較不能跑廁所，因此平常有喝咖啡習慣的我工作時比較不會喝太多咖啡",
-            "favorites": [
-                {
-                    "name": "爆汗１小時神補給包",
-                    "img": "fm_pr1_sm.png",
-                    "slug": "1"
-                }
-            ]
-        },
-        {
-            "avatar": "fm_sec5_vc_2.jpg",
-            "name": "吳睿恩",
-            "job": "跑者",
-            "content": "自從試用過鋭速的咖啡因錠後就從此愛上了！因為我的工作屬於服務業，工作時比較不能跑廁所，因此平常有喝咖啡習慣的我工作時比較不會喝太多咖啡",
-            "favorites": [
-                {
-                    "name": "耐力８小時神充電包",
-                    "img": "fm_pr3_sm.png",
-                    "slug": "3"
-                }
-            ]
-        },
-        {
-            "avatar": "fm_sec5_dc_2.jpg",
-            "name": "吳睿恩",
-            "job": "跑者",
-            "content": "自從試用過鋭速的咖啡因錠後就從此愛上了！因為我的工作屬於服務業，工作時比較不能跑廁所，因此平常有喝咖啡習慣的我工作時比較不會喝太多咖啡",
-            "favorites": [
-                {
-                    "name": "爆汗１小時神補給包",
-                    "img": "fm_pr1_sm.png",
-                    "slug": "1"
-                },
-                {
-                    "name": "流汗６小時神補水包",
-                    "img": "fm_pr2_sm.png",
-                    "slug": "2"
-                }
-            ]
-        },
-        {
-            "avatar": "fm_sec5_vc_3.jpg",
-            "name": "吳睿恩",
-            "job": "跑者",
-            "content": "自從試用過鋭速的咖啡因錠後就從此愛上了！因為我的工作屬於服務業，工作時比較不能跑廁所，因此平常有喝咖啡習慣的我工作時比較不會喝太多咖啡",
-            "favorites": [
-                {
-                    "name": "爆汗１小時神補給包",
-                    "img": "fm_pr1_sm.png",
-                    "slug": "1"
-                }
-            ]
         }
+    ],
+    "invoice_winners_sc":[
+        {     
+          "title": "第一抽",
+            "winners": [
+                  { 
+                    "prize" : "Apple Watch 7 40mm GPS 1組",
+                    "name"  : "陳OO	",
+                    "phone" : "09XXXXXXXX",
+                    "invoice_number" : "TU383585"
+                  }
+              ]
+        },
     ],
             }
            </script>  
