--- a/index.html
+++ b/index.html
@@ -1206,14 +1206,16 @@
 
           <div 
           id="app"
-          data-youtube="https://www.youtube.com/embed/gZEBDahq7F0?controls=0&autoplay=1&mute=1"
           ></div>
           <script type="module" src="/src/main.js"></script>
           <script>
             var fm_data = {
+              "form_sc":{
+                "close_time" : 1633578815000
+              },
             "brief": {
-              youtube : "-sQqi1sMq84",
-              img: "https://cdn.cybassets.com/s/files/12556/theme/38737/assets/1630560739_68ffda22_2da9f4fec48b7acff61c3552d1e9f676.jpg?1630560739"
+              "youtube" : "-sQqi1sMq84",
+              "img": "https://cdn.cybassets.com/s/files/12556/theme/38737/assets/1630560739_68ffda22_2da9f4fec48b7acff61c3552d1e9f676.jpg?1630560739"
             },
      "kols_sc": [
         {
